Payments Utility Frontend : Version 1.0

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="top-bar">
   <img routerLink="/" class="brand-logo" src="assets/dbsbank_logo.svg" alt="DBS Logo">
-  <button routerLinkActive="active" mat-stroked-button  routerLink="/home" >Home</button>
-  <button routerLinkActive="active" mat-stroked-button  routerLink="/transhistory" >History</button>
+  <button routerLinkActive="active" mat-button color="dark"  routerLink="/home" >Transfer Funds</button>
+  <button routerLinkActive="active" mat-button  routerLink="/transhistory" >Transactions History</button>
   <span class="flex-fill"></span>
   <button routerLinkActive="active" mat-stroked-button color="dark" routerLink="/login" >Login</button>
   <button mat-stroked-button color="warn" >Logout</button>
