--- a/src/app/components/transhistory/transhistory.component.html
+++ b/src/app/components/transhistory/transhistory.component.html
@@ -7,54 +7,56 @@
             <input matInput (keyup)="applyFilter($event)" placeholder="Ex. vin" #input>
           </mat-form-field>
         </div>
-        <table mat-table [dataSource]="dataSource">
+
+        <table mat-table #table [dataSource]="dataSource">
       
-          <!-- Position Column -->
-          <ng-container matColumnDef="transactionId">
+          ['id','senderAccountNumber', 'receiverAccountName', 'receiverAccountNumber', 'bic',
+           'amount','messageCode','transferType','timestamp'];
+
+          <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef> ID </th>
-            <td mat-cell *matCellDef="let element"> {{element.transactionId}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
           </ng-container>
       
-          <!-- Name Column -->
-          <ng-container matColumnDef="senderName">
-            <th mat-header-cell *matHeaderCellDef> Sender Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.senderName}} </td>
-          </ng-container>
-      
-          <!-- Weight Column -->
-          <ng-container matColumnDef="senderAcnum">
+          <ng-container matColumnDef="senderAccountNumber">
             <th mat-header-cell *matHeaderCellDef> Sender A/C Number </th>
-            <td mat-cell *matCellDef="let element"> {{element.senderAcnum}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.senderAccountNumber}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="receiverAccountName">
+            <th mat-header-cell *matHeaderCellDef> Receiver A/C Number </th>
+            <td mat-cell *matCellDef="let element"> {{element.receiverAccountName}} </td>
           </ng-container>
       
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="receiverName">
+          <ng-container matColumnDef="receiverAccountNumber">
             <th mat-header-cell *matHeaderCellDef> Receiver Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.receiverName}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.receiverAccountNumber}} </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="bic">
+            <th mat-header-cell *matHeaderCellDef> BIC </th>
+            <td mat-cell *matCellDef="let element"> {{element.bic}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="receiverAcnum">
-            <th mat-header-cell *matHeaderCellDef> Receiver A/C Number </th>
-            <td mat-cell *matCellDef="let element"> {{element.receiverAcnum}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="transactionAmount">
+          <ng-container matColumnDef="amount">
             <th mat-header-cell *matHeaderCellDef> Amount </th>
-            <td mat-cell *matCellDef="let element"> {{element.transactionAmount | currency:"INR"}} </td>
-          </ng-container>
-          <ng-container matColumnDef="transactionDate">
-            <th mat-header-cell *matHeaderCellDef> Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.transactionDate | date:"short"}} </td>
-          </ng-container>
-          <ng-container matColumnDef="transactionStatus">
-            <th mat-sort-header mat-header-cell *matHeaderCellDef>Status</th>
-            <td mat-cell *matCellDef="let element">
-            <mat-chip selected
-                    [color]="element.transactionStatus==false?'warn':'primary'">
-                    {{element.transactionStatus}}
-            </mat-chip></td>
+            <td mat-cell *matCellDef="let element"> {{element.amount | currency:"INR"}} </td>
           </ng-container>
 
+          <ng-container matColumnDef="messageCode">
+            <th mat-header-cell *matHeaderCellDef> Message Code </th>
+            <td mat-cell *matCellDef="let element"> {{element.messageCode}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="transferType">
+            <th mat-header-cell *matHeaderCellDef> Transfer Type </th>
+            <td mat-cell *matCellDef="let element"> {{element.transferType}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="timestamp">
+            <th mat-header-cell *matHeaderCellDef> Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.timestamp | date:"short"}} </td>
+          </ng-container>
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -64,7 +66,7 @@
           </tr>
         </table>
       
-        <mat-paginator [pageSizeOptions]="[2, 5]"
+        <mat-paginator [pageSizeOptions]="[5, 10]"
                        showFirstLastButtons 
                        aria-label="Select page of periodic elements">
         </mat-paginator>
